# speedy-nix

./: LICENSE-MIT  README.md  action.yml
.github/workflows/: mirrors-release.yml  test-action.yml  version-check.yml
version-check/: Cargo.toml  Dockerfile
version-check/src/: main.rs
