[package]
name = "version-check"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
semver = "1.0"
